src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>dll__DL_Phone__c</fullName>
        <label>DL Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>dll__DL_Revenue_M__c</fullName>
        <label>Revenue(M)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dll__DL_Revenue__c</fullName>
        <label>DL Revenue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dll__DL_Ticker__c</fullName>
        <label>DL Ticker</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dll__DL_Website__c</fullName>
        <label>DL Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>infer2__Infer_Rating__c</fullName>
        <description>The rating based on the Infer Score. You can modify how these rating buckets are defined by going to Setup | Installed Packages, and click on Configure next to the Infer package.</description>
        <formula>infer2__Infer_Score_ID__r.infer2__Rating__c</formula>
        <inlineHelpText>The rating based on the Infer Score.</inlineHelpText>
        <label>Infer: Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer2__Infer_Score_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Infer Score ID</label>
        <referenceTo>infer2__Infer_Entity_Score__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>infer2__Infer_Score__c</fullName>
        <description>The Infer Score out of 100; the higher the score, the better.</description>
        <formula>infer2__Infer_Score_ID__r.infer2__Score__c</formula>
        <inlineHelpText>The Infer Score out of 100; the higher the score, the better.</inlineHelpText>
        <label>Infer: Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer_signals__Infer_Smart_Signals_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Infer Smart Signals Record</label>
        <referenceTo>infer_signals__Infer_Smart_Signals_Record__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_appdynamics_revenue__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_31__c</formula>
        <label>Infer: Revenue (for AppDynamics)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jsImpacts__Added_from_Data_com__c</fullName>
        <formula>IF(OR(CONTAINS( TEXT(AccountSource) , &quot;Data.com&quot;),CONTAINS( TEXT(AccountSource) , &quot;Jigsaw&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Added from Data.com</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jsImpacts__Data_com_Managed__c</fullName>
        <formula>IF( Jigsaw&lt;&gt;&quot;&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data.com Managed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jsImpacts__Data_com_Matched__c</fullName>
        <formula>IF( Jigsaw&lt;&gt;&quot;&quot;, &quot;Matched&quot;, &quot;Unmatched&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data.com Matched</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jsImpacts__Data_com_does_not_auto_update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents automated Clean jobs from auto-filling fields with the matched Data.com record&apos;s values.</description>
        <inlineHelpText>Exclude this record from automated field updates from Data.com Clean jobs</inlineHelpText>
        <label>Data.com Does Not Auto-Update</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ANZ_Tier_One</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Revenue__c</columns>
        <columns>Region__c</columns>
        <columns>Sales_Segment__c</columns>
        <columns>USD_SUM_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Segment__c</field>
            <operation>contains</operation>
            <value>tier 1</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_COUNTRY</field>
            <operation>contains</operation>
            <value>Australia,New Zealand,NZ</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS2_COUNTRY</field>
            <operation>contains</operation>
            <value>Australia,New Zealand,NZ</value>
        </filters>
        <label>ANZ Tier One</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounts_By_TAM</fullName>
        <columns>Technical_Account_Manager__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Technical_Account_Manager__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Accounts By TAM</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounts_Mark_AND_Masodah</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>USD_SUM_Amount__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>mmaso,mcoop</value>
        </filters>
        <label>Accounts - Mark AND Masodah</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_VARs</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>VAR</value>
        </filters>
        <label>All VARs</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Canada_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_COUNTRY</field>
            <operation>contains</operation>
            <value>CAN,Canada</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <label>Canada Customers</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Canada_Customers1</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Total_Revenue_Converted_US__c</columns>
        <columns>Revenue__c</columns>
        <columns>Sales_Segment__c</columns>
        <columns>Number_of_AppDynamics_Users__c</columns>
        <columns>Number_of_Closed_Won_Opportunities__c</columns>
        <columns>dll__DL_Revenue__c</columns>
        <columns>dll__DL_Revenue_M__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_COUNTRY</field>
            <operation>equals</operation>
            <value>CAN,Canada</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <label>Canada Customers</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Canada_by_Tier_Owner</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Account_Target_Level__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Revenue__c</columns>
        <columns>Sales_Segment__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_COUNTRY</field>
            <operation>contains</operation>
            <value>CAN,Canada</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE</field>
            <operation>notContain</operation>
            <value>BC,AB,SK,YT,Yukon,QC,NB,NS,NF,PE,Quebec,Ontario</value>
        </filters>
        <label>C. Canada by Tier &amp; Owner</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Evan_Account_List</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>eblak</value>
        </filters>
        <label>Evan Account List</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Financial_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Total_Revenue_Converted_US__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.INDUSTRY</field>
            <operation>equals</operation>
            <value>Finance,Insurance</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer,Major Account</value>
        </filters>
        <label>Financial Customers</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Flanders_Target</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>USD_SUM_Amount__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE</field>
            <operation>equals</operation>
            <value>Texas,TX</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS2_STATE</field>
            <operation>equals</operation>
            <value>Texas,TX</value>
        </filters>
        <filters>
            <field>Customer_Status__c</field>
            <operation>equals</operation>
            <value>Active Customer</value>
        </filters>
        <label>Flanders Target</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JD_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>jdorr,jbrow</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <label>JD Customers</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Larry_s_Accounts_Territory_All_Customer</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Total_Revenue_Converted_US__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>New_Customer_Acquisition_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE</field>
            <operation>contains</operation>
            <value>NJ,NY</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS2_STATE</field>
            <operation>contains</operation>
            <value>NJ,NY</value>
        </filters>
        <label>NY Metro Accounts- All Customer</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lee_s_Accounts_All_NW_Customers_DB</fullName>
        <booleanFilter>(1 OR 2) and 3</booleanFilter>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE</field>
            <operation>contains</operation>
            <value>CA,OR,WA,ID,UT,MT,WY,BC</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS2_STATE</field>
            <operation>contains</operation>
            <value>CA,OR,WA,ID,UT,MT,WY,BC</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>LAM</value>
        </filters>
        <label>Lee&apos;s Accounts- David Lam NW</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lee_s_Accounts_All_North_West_Cust_DB</fullName>
        <booleanFilter>1 AND (2 OR 3) and 4</booleanFilter>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE</field>
            <operation>equals</operation>
            <value>CA,OR,WA,ID,UT,MT,WY,AK,BC,AB,SK</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS2_STATE</field>
            <operation>equals</operation>
            <value>CA,OR,WA,ID,UT,MT,WY,AK,BC,AB,SK</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notContain</operation>
            <value>reksten,jweinat</value>
        </filters>
        <label>Lee&apos;s Accounts- All NW Customers (DB)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lee_s_Accounts_Lee_s_NW_Customers</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Deployment_Status__c</columns>
        <columns>Overall_Customer_Satisfaction__c</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>weinberg</value>
        </filters>
        <label>Lee&apos;s Accounts- Lee&apos;s NW Customers</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Co_Sale_Partner</fullName>
        <active>false</active>
        <description>Partner with signed co-sale agreement</description>
        <label>Co-Sale Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Financing_Partner</fullName>
        <active>true</active>
        <description>Selected when the account provides financing for our customer&apos;s purchases</description>
        <label>Financing Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Former_Customore</fullName>
        <active>false</active>
        <description>Please select this record type for Former Customers</description>
        <label>Former Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Account</fullName>
        <active>true</active>
        <description>Select this Account Type for New Partners</description>
        <label>Partner Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect</fullName>
        <active>false</active>
        <description>For new prospect accounts</description>
        <label>Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Provider</fullName>
        <active>false</active>
        <description>Use this for managed service providers and other service providers</description>
        <label>Service Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Account</fullName>
        <active>true</active>
        <description>Standard Customer Account Record Type</description>
        <label>Standard Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Systems_Integrator</fullName>
        <active>false</active>
        <description>To be used for Systems Integrators</description>
        <label>Systems Integrator</label>
    </recordTypes>
    <recordTypes>
        <fullName>VAR_Account</fullName>
        <active>false</active>
        <description>Select this Account Type for new VAR Accounts</description>
        <label>VAR Account</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Restrict_Account_Owner_Changes</fullName>
        <active>false</active>
        <description>Restricts the ability to change the Account Owner.</description>
        <errorConditionFormula>AND( 
ISCHANGED(OwnerId),  
NOT (ISNEW()),
$User.ProfileId &lt;&gt; &quot;00e80000001KPYt&quot;,
$User.ProfileId &lt;&gt; &quot;00e80000001KPYy&quot;,
$User.ProfileId &lt;&gt; &quot;00e80000001KPZ3&quot;,
$User.ProfileId &lt;&gt; &quot;00e80000001KPZX&quot;,
$User.Id &lt;&gt; &quot;00580000007FmvQ&quot;)





/* 
User Profile Ids in the following order:
$User.ProfileId &lt;&gt; &quot;AppD Sys Admin&quot;, 
$User.ProfileId &lt;&gt; &quot;AppD Order Ops&quot;,
$User.ProfileId &lt;&gt; &quot;AppD Sales Manager&quot;,
$User.ProfileId &lt;&gt; &quot;Marketing Manager&quot;,
$User.Id &lt;&gt; &quot;Jesse McQuade&quot;

*/</errorConditionFormula>
        <errorMessage>Please check with your Manager prior to contacting orderops@appdynamics.com or sfdcsupport@appdynamics.com for assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jsImpacts__Block_autoupdate_from_Data_com</fullName>
        <active>true</active>
        <description>Record level prevention of automated Clean jobs from automatically updating field values.</description>
        <errorConditionFormula>(  jsImpacts__Data_com_does_not_auto_update__c  ) &amp;&amp; ($User.Alias = &quot;autocln&quot;) &amp;&amp; (ISCHANGED(  DunsNumber  )  ||  ISCHANGED(   NumberOfEmployees   ) ||  ISCHANGED(    AnnualRevenue    ) ||  ISCHANGED(  TickerSymbol  ) ||  ISCHANGED(  Website  ) ||  ISCHANGED(  Industry  ) ||  ISCHANGED(   Ownership   ) ||  ISCHANGED(   BillingCity   ) ||  ISCHANGED(   BillingCountry   ) ||  ISCHANGED(   BillingState   ) ||  ISCHANGED(   BillingStreet   ) ||  ISCHANGED(   BillingPostalCode   ) ||  ISCHANGED(   Phone   ) ||  ISCHANGED(   Fax   ) ||  ISCHANGED(  Site   ) ||  ISCHANGED(  Tradestyle   ) ||  ISCHANGED(   YearStarted   ) ||  ISCHANGED(   Sic   ) ||  ISCHANGED(   SicDesc   ) ||  ISCHANGED(   NaicsCode   ) ||  ISCHANGED(   NaicsDesc   ) ||  ISCHANGED(   Description   ) )</errorConditionFormula>
        <errorMessage>This record has been excluded from automated field updates from Data.com Clean jobs.</errorMessage>
    </validationRules>
</CustomObject>